Fix layout issue with small tracklists

--- a/src/styles/playlist.css
+++ b/src/styles/playlist.css
@@ -1,7 +1,7 @@
 .playlist {
-    height: 100%;
+    height: 90vh;
     width: 100%;
-    overflow-y: scroll;
+    overflow: hidden scroll;
 }
 
 .playlistHeader {
