--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,7 +1,7 @@
 .searchComponent {
-    height: 100%;
+    height: 90vh;
     width: 100%;
-    overflow-y: scroll;
+    overflow: hidden scroll;
 }
 
 .searchHeader {
